--- a/multi_layer_perceptron/mnist.ipynb
+++ b/multi_layer_perceptron/mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "48682f7a",
    "metadata": {},
    "outputs": [],
@@ -14,35 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "50320ca4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:2025-09-16 11:14:33,043:jax._src.xla_bridge:893: Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "W0000 00:00:1757988873.044922 23686962 mps_client.cc:510] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\n",
-      "I0000 00:00:1757988873.080649 23686962 service.cc:145] XLA service 0x158e55810 initialized for platform METAL (this does not guarantee that XLA will be used). Devices:\n",
-      "I0000 00:00:1757988873.080786 23686962 service.cc:153]   StreamExecutor device (0): Metal, <undefined>\n",
-      "I0000 00:00:1757988873.082262 23686962 mps_client.cc:406] Using Simple allocator.\n",
-      "I0000 00:00:1757988873.082302 23686962 mps_client.cc:384] XLA backend will use up to 11452776448 bytes on device 0 for SimpleAllocator.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metal device set to: Apple M3\n",
-      "\n",
-      "systemMemory: 16.00 GB\n",
-      "maxCacheSize: 5.33 GB\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cpu = jax.devices(\"cpu\")[0] if jax.devices(\"cpu\") else None\n",
     "gpu = jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else None\n",
@@ -53,23 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ba9e4713",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data range: 0 to 255\n",
-      "Number of classes: 10\n",
-      "Training data shape: (60000, 784)\n",
-      "Training labels shape: (60000, 10)\n",
-      "Test data shape: (10000, 784)\n",
-      "Test labels shape: (10000, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
     "\n",
@@ -92,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "174a95e8",
    "metadata": {},
    "outputs": [],
@@ -103,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "138f0a73",
    "metadata": {},
    "outputs": [],
@@ -116,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "daa28eed",
    "metadata": {},
    "outputs": [],
@@ -128,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "df468564",
    "metadata": {},
    "outputs": [],
@@ -145,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1fc9711c",
    "metadata": {},
    "outputs": [],
@@ -165,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "11c8feae",
    "metadata": {},
    "outputs": [],
@@ -176,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e4f6e1d5",
    "metadata": {},
    "outputs": [],
@@ -188,17 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "19fb4fd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "W1 = jax.random.normal(key, shape=(input_dim, hidden_dim))\n",
     "b1 = jax.random.normal(key, shape=(hidden_dim,))\n",
-    "W2 = jax.random.normal(key, shape=(hidden_dim, hidden_dim))\n",
-    "b2 = jax.random.normal(key, shape=(hidden_dim,))\n",
-    "W3 = jax.random.normal(key, shape=(hidden_dim, output_dim))\n",
-    "b3 = jax.random.normal(key, shape=(output_dim,))"
+    "W2 = jax.random.normal(key, shape=(hidden_dim, output_dim))\n",
+    "b2 = jax.random.normal(key, shape=(output_dim,))"
    ]
   },
   {
@@ -206,15 +166,7 @@
    "execution_count": null,
    "id": "24f44d1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60000, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 1000\n",
     "eta = 0.1\n",
@@ -227,16 +179,12 @@
     "    h1 = Relu.forward(u1)\n",
     "\n",
     "    u2 = jnp.dot(h1, W2) + b2\n",
-    "    h2 = Relu.forward(u2)\n",
+    "    y_hat = Softmax.forward(u2)\n",
     "\n",
-    "    u3 = jnp.dot(h2, W3) + b3\n",
-    "    y_hat = Softmax.forward(u3)\n",
+    "    loss = cross_entropy(y_hat, y_train)\n",
     "\n",
     "    # backward\n",
-    "    delta_3 = y_hat - y_train\n",
-    "\n",
-    "    dout = jnp.dot(delta_3, W3.T)\n",
-    "    delta_2 = Relu.backward(dout=dout, x=u2)\n",
+    "    delta_2 = y_hat - y_train\n",
     "\n",
     "    dout = jnp.dot(delta_2, W2.T)\n",
     "    delta_1 = Relu.backward(dout=dout, x=u1)\n",
@@ -248,8 +196,6 @@
     "    dW2 = jnp.dot(h1.T, delta_2) / batch_size\n",
     "    db2 = jnp.mean(delta_2, axis=0)\n",
     "\n",
-    "    dW3 = jnp.dot(h2.T, delta_3) / batch_size\n",
-    "    db3 = jnp.mean(delta_3, axis=0)\n",
     "\n",
     "    # parameter update\n",
     "    W1 -= eta * dW1\n",
@@ -258,8 +204,27 @@
     "    W2 -= eta * dW2\n",
     "    b2 -= eta * db2\n",
     "\n",
-    "    W3 -= eta * dW3\n",
-    "    b3 -= eta * db3\n"
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"epoch: {epoch}, loss: {loss}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9c693fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u1 = jnp.dot(x_test, W1) + b1\n",
+    "h1 = Relu.forward(u1)\n",
+    "\n",
+    "u2 = jnp.dot(h1, W2) + b2\n",
+    "y_hat = Softmax.forward(u2)\n",
+    "\n",
+    "y_pred = jnp.argmax(y_hat, axis=-1)\n",
+    "y_true = jnp.argmax(y_test, axis=-1)\n",
+    "acc = jnp.mean(y_pred == y_true)\n",
+    "print(f\"Test accuracy: {acc * 100:.2f}%\")"
    ]
   }
  ],
