add normal gpu and update initial value

--- a/multi_layer_perceptron/xor.ipynb
+++ b/multi_layer_perceptron/xor.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import jax\n",
-    "import jax.numpy as jnp"
+    "import jax.numpy as jnp\n",
+    "from typing import Tuple"
    ]
   },
   {
@@ -19,7 +20,9 @@
    "outputs": [],
    "source": [
     "cpu = jax.devices(\"cpu\")[0] if jax.devices(\"cpu\") else None\n",
-    "gpu = jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else None\n",
+    "gpu = (jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else\n",
+    "       jax.devices(\"gpu\")[0] if jax.devices(\"gpu\") else None)\n",
+    "\n",
     "jax.config.update(\"jax_platform_name\", \"cpu\")\n",
     "\n",
     "key = jax.random.PRNGKey(0)"
@@ -39,26 +42,15 @@
     "        [1, 0],\n",
     "        [1, 1],\n",
     "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90e54988",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = jnp.array([[0], [1], [1], [0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b626c569",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "x_valid = jnp.array(\n",
+    "    [\n",
+    "        [0, 0],\n",
+    "        [0, 1],\n",
+    "        [1, 1],\n",
+    "        [1, 0],\n",
+    "    ]\n",
+    ")\n",
     "x_test = jnp.array(\n",
     "    [\n",
     "        [1, 0],\n",
@@ -72,10 +64,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe1c077",
+   "id": "90e54988",
    "metadata": {},
    "outputs": [],
    "source": [
+    "y_train = jnp.array([[0], [1], [1], [0]])\n",
+    "y_valid = jnp.array([[0], [1], [0], [1]])\n",
     "y_test = jnp.array([[1], [1], [1], [1]])"
    ]
   },
@@ -99,13 +93,16 @@
    "outputs": [],
    "source": [
     "class Sigmoid:\n",
-    "    @staticmethod\n",
-    "    def forward(x: jnp.array) -> jnp.array:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def __call__(self, x: jnp.array) -> jnp.array:\n",
     "        return jnp.exp(jnp.minimum(x, 0)) / (1 + jnp.exp(-jnp.abs(x)))\n",
     "\n",
-    "    @staticmethod\n",
-    "    def backward(dout: jnp.array, x: jnp.array) -> jnp.array:\n",
-    "        return dout * (1.0 - Sigmoid.forward(x)) * Sigmoid.forward(x)"
+    "    def backward(self, dout: jnp.array, x: jnp.array) -> jnp.array:\n",
+    "        return dout * (1.0 - self(x)) * self(x)\n",
+    "\n",
+    "sigmoid = Sigmoid()"
    ]
   },
   {
@@ -116,13 +113,16 @@
    "outputs": [],
    "source": [
     "class Relu:\n",
-    "    @staticmethod\n",
-    "    def forward(x: jnp.array) -> jnp.array:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def __call__(self, x: jnp.array) -> jnp.array:\n",
     "        return jnp.maximum(0, x)\n",
     "\n",
-    "    @staticmethod\n",
-    "    def backward(dout: jnp.array, x: jnp.array) -> jnp.array:\n",
-    "        return dout * (x > 0).astype(dout.dtype)"
+    "    def backward(self, dout: jnp.array, x: jnp.array) -> jnp.array:\n",
+    "        return dout * (x > 0).astype(dout.dtype)\n",
+    "\n",
+    "relu = Relu()"
    ]
   },
   {
@@ -155,40 +155,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W1 = jax.random.normal(key, shape=(input_dim, hidden_dim))\n",
-    "b1 = jax.random.normal(key, shape=(hidden_dim,))\n",
-    "W2 = jax.random.normal(key, shape=(hidden_dim, output_dim))\n",
-    "b2 = jax.random.normal(key, shape=(output_dim,))"
+    "W1 = jax.random.uniform(key, minval=-0.08, maxval=0.08, shape=(input_dim, hidden_dim)).astype(\"float32\")\n",
+    "b1 = jnp.zeros(shape=(hidden_dim,)).astype(\"float32\")\n",
+    "W2 = jax.random.uniform(key, minval=-0.08, maxval=0.08, shape=(hidden_dim, output_dim)).astype(\"float32\")\n",
+    "b2 = jnp.zeros(shape=(output_dim,)).astype(\"float32\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bd98613",
+   "id": "2aa12714",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10000\n",
-    "eta = 0.1\n",
+    "def train(x: jnp.array, y: jnp.array, eta=0.05) -> jnp.array:\n",
+    "    global W1, b1, W2, b2\n",
     "\n",
-    "for epoch in range(1, epochs+1):\n",
-    "    batch_size = x_train.shape[0]\n",
+    "    batch_size = x.shape[0]\n",
     "\n",
     "    # forward\n",
-    "    u1 = jnp.dot(x_train, W1) + b1 # (batch_size, hidden_dim)\n",
-    "    h1 = Relu.forward(u1) # (batch_size, hidden_dim)\n",
-    "    u2 = jnp.dot(h1, W2) + b2 # (batch_size, output_dim)\n",
-    "    y_hat = Sigmoid.forward(u2) # (batch_size, output_dim)\n",
-    "    loss = binary_cross_entropy(y_train, y_hat)\n",
+    "    u1 = jnp.dot(x, W1) + b1\n",
+    "    h1 = relu(u1)\n",
+    "\n",
+    "    u2 = jnp.dot(h1, W2) + b2\n",
+    "    y_hat = sigmoid(u2)\n",
+    "    loss = binary_cross_entropy(y, y_hat)\n",
     "\n",
     "    # backward\n",
-    "    delta_2 = y_hat - y_train\n",
+    "    delta_2 = y_hat - y\n",
     "\n",
     "    dout = jnp.dot(delta_2, W2.T)\n",
-    "    delta_1 = Relu.backward(dout=dout, x=u1)\n",
+    "    delta_1 = relu.backward(dout=dout, x=u1)\n",
     "\n",
     "    # calculate gradients\n",
-    "    dW1 = jnp.dot(x_train.T, delta_1) / batch_size\n",
+    "    dW1 = jnp.dot(x.T, delta_1) / batch_size\n",
     "    db1 = jnp.mean(delta_1, axis=0)\n",
     "\n",
     "    dW2 = jnp.dot(h1.T, delta_2) / batch_size\n",
@@ -201,8 +201,42 @@
     "    W2 -= eta * dW2\n",
     "    b2 -= eta * db2\n",
     "\n",
-    "    if epoch % 100 == 0:\n",
-    "        print(f\"epoch: {epoch}, loss: {loss}\")"
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6151514a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid(x: jnp.array, y: jnp.array) -> Tuple[jnp.array, jnp.array]:\n",
+    "    # forward\n",
+    "    u1 = jnp.dot(x, W1) + b1\n",
+    "    h1 = relu(u1)\n",
+    "\n",
+    "    u2 = jnp.dot(h1, W2) + b2\n",
+    "    y_hat = sigmoid(u2)\n",
+    "    loss = binary_cross_entropy(y, y_hat)\n",
+    "\n",
+    "    return loss, y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bd98613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 3000\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    loss = train(x_train, y_train)\n",
+    "\n",
+    "loss, y_pred = valid(x_valid, y_valid)\n",
+    "print(y_pred)"
    ]
   },
   {
@@ -212,13 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u1 = jnp.dot(x_test, W1) + b1 # (batch_size, hidden_dim)\n",
-    "h1 = Relu.forward(u1) # (batch_size, hidden_dim)\n",
-    "u2 = jnp.dot(h1, W2) + b2 # (batch_size, output_dim)\n",
-    "y_hat = Sigmoid.forward(u2) # (batch_size, output_dim)\n",
+    "_, y_pred = valid(x_test, y_test)\n",
     "\n",
     "print(\"Predictions:\")\n",
-    "print(y_hat)\n",
+    "print(y_pred)\n",
     "print(\"\\nTrue labels:\")\n",
     "print(y_test)"
    ]
