--- a/logistic_regression/and.ipynb
+++ b/logistic_regression/and.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import jax\n",
-    "import jax.numpy as jnp"
+    "import jax.numpy as jnp\n",
+    "from typing import Tuple"
    ]
   },
   {
@@ -19,7 +20,9 @@
    "outputs": [],
    "source": [
     "cpu = jax.devices(\"cpu\")[0] if jax.devices(\"cpu\") else None\n",
-    "gpu = jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else None\n",
+    "gpu = (jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else\n",
+    "       jax.devices(\"gpu\")[0] if jax.devices(\"gpu\") else None)\n",
+    "\n",
     "jax.config.update(\"jax_platform_name\", \"cpu\")\n",
     "\n",
     "key = jax.random.PRNGKey(0)"
@@ -39,26 +42,15 @@
     "        [1, 0],\n",
     "        [1, 1],\n",
     "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cddc5764",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = jnp.array([[0], [0], [0], [1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fa58031",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "x_valid = jnp.array(\n",
+    "    [\n",
+    "        [1, 1],\n",
+    "        [0, 1],\n",
+    "        [0, 0],\n",
+    "        [1, 0],\n",
+    "    ]\n",
+    ")\n",
     "x_test = jnp.array(\n",
     "    [\n",
     "        [1, 0],\n",
@@ -76,6 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "y_train = jnp.array([[0], [0], [0], [1]])\n",
+    "y_valid = jnp.array([[1], [0], [0], [0]])\n",
     "y_test = jnp.array([[0], [0], [0], [0]])"
    ]
   },
@@ -120,8 +114,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = jax.random.normal(key, shape=(2, 1))\n",
-    "b = jax.random.normal(key, shape=(1,))"
+    "W = jax.random.uniform(key, minval=-0.08, maxval=0.08, shape=(2, 1)).astype(\"float32\")\n",
+    "b = jnp.zeros(shape=(1,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "878f6e51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(x: jnp.array, y: jnp.array, eta=1.0) -> jnp.array:\n",
+    "    global W, b\n",
+    "\n",
+    "    y_hat = sigmoid(jnp.dot(x, W) + b)\n",
+    "    loss = binary_cross_entropy(y, y_hat)\n",
+    "\n",
+    "    delta = y_hat - y\n",
+    "\n",
+    "    batch_size = y.shape[0]\n",
+    "    dW = jnp.dot(x_train.T, delta) / batch_size\n",
+    "    db = jnp.mean(delta, axis=0, keepdims=True)\n",
+    "\n",
+    "    W -= eta * dW\n",
+    "    b -= eta * db\n",
+    "\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce009487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid(x: jnp.array, y: jnp.array) -> Tuple[jnp.array, jnp.array]:\n",
+    "    y_hat = sigmoid(jnp.dot(x, W) + b)\n",
+    "    loss = binary_cross_entropy(y, y_hat)\n",
+    "    return loss, y_hat"
    ]
   },
   {
@@ -131,24 +163,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10000\n",
-    "eta = 0.1\n",
+    "epochs = 1000\n",
     "\n",
-    "for epoch in range(1, epochs+1):\n",
-    "    y_hat = sigmoid(jnp.dot(x_train, W) + b)\n",
-    "    loss = binary_cross_entropy(y_train, y_hat).item()\n",
+    "for epoch in range(epochs):\n",
+    "    loss = train(x_train, y_train)\n",
+    "    loss, y_pred = valid(x_valid, y_valid)\n",
     "\n",
-    "    delta = y_hat - y_train\n",
-    "\n",
-    "    batch_size = y_train.shape[0]\n",
-    "    dW = jnp.dot(x_train.T, delta) / batch_size\n",
-    "    db = jnp.mean(delta, axis=0, keepdims=True)\n",
-    "\n",
-    "    W -= eta * dW\n",
-    "    b -= eta * db\n",
-    "\n",
-    "    if epoch % 1000 == 0:\n",
-    "        print(f\"epoch: {epoch}, loss: {loss}\")"
+    "    if epoch % 10 == 9:\n",
+    "        print(f\"epoch: {epoch + 1}, Valid loss: {loss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03431586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(y_pred)"
    ]
   },
   {
@@ -158,9 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat = sigmoid(jnp.dot(x_test, W) + b)\n",
+    "_, y_pred = valid(x_test, y_test)\n",
     "print(\"Predictions:\")\n",
-    "print(y_hat)\n",
+    "print(y_pred)\n",
     "print(\"\\nTrue labels:\")\n",
     "print(y_test)"
    ]
