--- a/softmax_regression/mnist.ipynb
+++ b/softmax_regression/mnist.ipynb
@@ -7,9 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import tensorflow as tf"
+    "from keras.datasets import mnist\n",
+    "from typing import Tuple"
    ]
   },
   {
@@ -20,7 +23,9 @@
    "outputs": [],
    "source": [
     "cpu = jax.devices(\"cpu\")[0] if jax.devices(\"cpu\") else None\n",
-    "gpu = jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else None\n",
+    "gpu = (jax.devices(\"METAL\")[0] if jax.devices(\"METAL\") else\n",
+    "       jax.devices(\"gpu\")[0] if jax.devices(\"gpu\") else None)\n",
+    "\n",
     "jax.config.update(\"jax_platform_name\", \"cpu\")\n",
     "\n",
     "key = jax.random.PRNGKey(0)"
@@ -33,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "\n",
     "print(f\"Data range: {x_train.min()} to {x_train.max()}\")\n",
     "print(f\"Number of classes: {len(jnp.unique(y_train))}\")\n",
@@ -46,10 +51,14 @@
     "y_train = jnp.eye(num_classes)[y_train]\n",
     "y_test = jnp.eye(num_classes)[y_test]\n",
     "\n",
+    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size=10000)\n",
+    "\n",
     "print(f\"Training data shape: {x_train.shape}\")\n",
     "print(f\"Training labels shape: {y_train.shape}\")\n",
+    "print(f\"Validation data shape: {x_valid.shape}\")\n",
+    "print(f\"Validation labels shape: {y_valid.shape}\")\n",
     "print(f\"Test data shape: {x_test.shape}\")\n",
-    "print(f\"Test labels shape: {y_test.shape}\")\n"
+    "print(f\"Test labels shape: {y_test.shape}\")"
    ]
   },
   {
@@ -60,6 +69,7 @@
    "outputs": [],
    "source": [
     "x_train = x_train.astype('float32') / 255.0\n",
+    "x_valid = x_valid.astype('float32') / 255.0\n",
     "x_test = x_test.astype('float32') / 255.0"
    ]
   },
@@ -72,6 +82,8 @@
    "source": [
     "x_train = jnp.array(x_train)\n",
     "y_train = jnp.array(y_train)\n",
+    "x_valid = jnp.array(x_valid)\n",
+    "y_valid = jnp.array(y_valid)\n",
     "x_test = jnp.array(x_test)\n",
     "y_test = jnp.array(y_test)"
    ]
@@ -120,26 +132,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = jax.random.normal(key, shape=(784, 10))\n",
-    "b = jax.random.normal(key, shape=(10,))"
+    "W = jax.random.uniform(key=key, minval=-0.08, maxval=0.08, shape=(784, 10)).astype('float32')\n",
+    "b = jnp.zeros(shape=(10,)).astype('float32')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a3976d4",
+   "id": "ee118934",
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 1000\n",
-    "eta = 0.1\n",
+    "def train(x: jnp.array, y: jnp.array, eta=1.0) -> jnp.array:\n",
+    "    global W, b\n",
     "\n",
-    "for epoch in range(1, epochs+1):\n",
-    "    y_hat = softmax(jnp.dot(x_train, W) + b)\n",
+    "    y_hat = softmax(jnp.dot(x, W) + b)\n",
     "\n",
-    "    loss = cross_entropy(y_hat, y_train)\n",
+    "    loss = cross_entropy(y_hat, y)\n",
     "\n",
-    "    delta = y_hat - y_train\n",
+    "    delta = y_hat - y\n",
     "\n",
     "    batch_size = x_train.shape[0]\n",
     "\n",
@@ -149,8 +160,42 @@
     "    W -= eta * dW\n",
     "    b -= eta * db\n",
     "\n",
-    "    if epoch % 100 == 0:\n",
-    "        print(f\"epoch: {epoch}, loss: {loss}\")"
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff61f8cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid(x: jnp.array, y: jnp.array) -> Tuple[jnp.array, jnp.array]:\n",
+    "    y_hat = softmax(jnp.dot(x, W) + b)\n",
+    "    loss = cross_entropy(y_hat, y)\n",
+    "    return loss, y_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a3976d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 100\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    loss = train(x_train, y_train)\n",
+    "\n",
+    "    loss, y_pred = valid(x_valid, y_valid)\n",
+    "\n",
+    "    if epoch % 10 == 9 or epoch == 0:\n",
+    "        print('EPOCH: {}, Valid Cost: {:.3f}, Valid Accuracy: {:.3f}'.format(\n",
+    "            epoch + 1,\n",
+    "            loss,\n",
+    "            accuracy_score(jnp.argmax(y_valid, axis=1), jnp.argmax(y_pred, axis=1))\n",
+    "        ))"
    ]
   },
   {
