--- a/logistic_regression/and.ipynb
+++ b/logistic_regression/and.ipynb
@@ -42,7 +42,7 @@
     "        [1, 0],\n",
     "        [1, 1],\n",
     "    ]\n",
-    ")\n",
+    ") # (4, 2)\n",
     "x_valid = jnp.array(\n",
     "    [\n",
     "        [1, 1],\n",
@@ -50,7 +50,7 @@
     "        [0, 0],\n",
     "        [1, 0],\n",
     "    ]\n",
-    ")\n",
+    ") # (4, 2)\n",
     "x_test = jnp.array(\n",
     "    [\n",
     "        [1, 0],\n",
@@ -58,19 +58,11 @@
     "        [1, 0],\n",
     "        [0, 1],\n",
     "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a9cfa96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = jnp.array([[0], [0], [0], [1]])\n",
-    "y_valid = jnp.array([[1], [0], [0], [0]])\n",
-    "y_test = jnp.array([[0], [0], [0], [0]])"
+    ") # (4, 2)\n",
+    "\n",
+    "y_train = jnp.array([[0], [0], [0], [1]]) # (4, 1)\n",
+    "y_valid = jnp.array([[1], [0], [0], [0]]) # (4, 1)\n",
+    "y_test = jnp.array([[0], [0], [0], [0]])  # (4, 1)"
    ]
   },
   {
@@ -128,15 +120,19 @@
     "def train(x: jnp.array, y: jnp.array, eta=1.0) -> jnp.array:\n",
     "    global W, b\n",
     "\n",
-    "    y_hat = sigmoid(jnp.dot(x, W) + b)\n",
+    "    # forward\n",
+    "    y_hat = sigmoid(jnp.dot(x, W) + b)          # (batch_size, out_dim)\n",
     "    loss = binary_cross_entropy(y, y_hat)\n",
     "\n",
-    "    delta = y_hat - y\n",
+    "    # backward\n",
+    "    delta = y_hat - y                           # (batch_size, out_dim)\n",
     "\n",
-    "    batch_size = y.shape[0]\n",
-    "    dW = jnp.dot(x_train.T, delta) / batch_size\n",
-    "    db = jnp.mean(delta, axis=0, keepdims=True)\n",
+    "    # calculate gradients\n",
+    "    batch_size = x.shape[0]\n",
+    "    dW = jnp.dot(x.T, delta) / batch_size       # (in_dim, out_dim)\n",
+    "    db = jnp.mean(delta, axis=0, keepdims=True) # (out_dim,)\n",
     "\n",
+    "    # update parameters\n",
     "    W -= eta * dW\n",
     "    b -= eta * db\n",
     "\n",
@@ -169,18 +165,8 @@
     "    loss = train(x_train, y_train)\n",
     "    loss, y_pred = valid(x_valid, y_valid)\n",
     "\n",
-    "    if epoch % 10 == 9:\n",
-    "        print(f\"epoch: {epoch + 1}, Valid loss: {loss}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03431586",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(y_pred)"
+    "    if epoch % 10 == 9 or epoch == 0:\n",
+    "        print(f\"EPOCH: {epoch + 1}, Valid Loss: {loss}\")"
    ]
   },
   {
@@ -193,7 +179,7 @@
     "_, y_pred = valid(x_test, y_test)\n",
     "print(\"Predictions:\")\n",
     "print(y_pred)\n",
-    "print(\"\\nTrue labels:\")\n",
+    "print(\"\\nTrue Labels:\")\n",
     "print(y_test)"
    ]
   }
