--- a/multi_layer_perceptron/xor.ipynb
+++ b/multi_layer_perceptron/xor.ipynb
@@ -42,7 +42,7 @@
     "        [1, 0],\n",
     "        [1, 1],\n",
     "    ]\n",
-    ")\n",
+    ") # (4, 2)\n",
     "x_valid = jnp.array(\n",
     "    [\n",
     "        [0, 0],\n",
@@ -50,7 +50,7 @@
     "        [1, 1],\n",
     "        [1, 0],\n",
     "    ]\n",
-    ")\n",
+    ") # (4, 2)\n",
     "x_test = jnp.array(\n",
     "    [\n",
     "        [1, 0],\n",
@@ -58,19 +58,11 @@
     "        [1, 0],\n",
     "        [0, 1],\n",
     "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90e54988",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = jnp.array([[0], [1], [1], [0]])\n",
-    "y_valid = jnp.array([[0], [1], [0], [1]])\n",
-    "y_test = jnp.array([[1], [1], [1], [1]])"
+    ") # (4, 2)\n",
+    "\n",
+    "y_train = jnp.array([[0], [1], [1], [0]]) # (4, 1)\n",
+    "y_valid = jnp.array([[0], [1], [0], [1]]) # (4, 1)\n",
+    "y_test = jnp.array([[1], [1], [1], [1]])  # (4, 1)"
    ]
   },
   {
@@ -99,8 +91,8 @@
     "    def __call__(self, x: jnp.array) -> jnp.array:\n",
     "        return jnp.exp(jnp.minimum(x, 0)) / (1 + jnp.exp(-jnp.abs(x)))\n",
     "\n",
-    "    def backward(self, dout: jnp.array, x: jnp.array) -> jnp.array:\n",
-    "        return dout * (1.0 - self(x)) * self(x)\n",
+    "    def deriv(self, u: jnp.array) -> jnp.array:\n",
+    "        return self(u) * (1.0 - self(u))\n",
     "\n",
     "sigmoid = Sigmoid()"
    ]
@@ -119,8 +111,8 @@
     "    def __call__(self, x: jnp.array) -> jnp.array:\n",
     "        return jnp.maximum(0, x)\n",
     "\n",
-    "    def backward(self, dout: jnp.array, x: jnp.array) -> jnp.array:\n",
-    "        return dout * (x > 0).astype(dout.dtype)\n",
+    "    def deriv(self, u: jnp.array) -> jnp.array:\n",
+    "        return (u > 0).astype(u.dtype)\n",
     "\n",
     "relu = Relu()"
    ]
@@ -171,30 +163,27 @@
     "def train(x: jnp.array, y: jnp.array, eta=0.05) -> jnp.array:\n",
     "    global W1, b1, W2, b2\n",
     "\n",
-    "    batch_size = x.shape[0]\n",
-    "\n",
     "    # forward\n",
-    "    u1 = jnp.dot(x, W1) + b1\n",
-    "    h1 = relu(u1)\n",
+    "    u1 = jnp.dot(x, W1) + b1                          # (batch_size, hidden_dim)\n",
+    "    h1 = relu(u1)                                     # (batch_size, hidden_dim)\n",
     "\n",
-    "    u2 = jnp.dot(h1, W2) + b2\n",
-    "    y_hat = sigmoid(u2)\n",
+    "    u2 = jnp.dot(h1, W2) + b2                         # (batch_size, out_dim)\n",
+    "    y_hat = sigmoid(u2)                               # (batch_size, out_dim)\n",
     "    loss = binary_cross_entropy(y, y_hat)\n",
     "\n",
     "    # backward\n",
-    "    delta_2 = y_hat - y\n",
-    "\n",
-    "    dout = jnp.dot(delta_2, W2.T)\n",
-    "    delta_1 = relu.backward(dout=dout, x=u1)\n",
+    "    delta_2 = y_hat - y                               # (batch_size, out_dim)\n",
+    "    delta_1 = relu.deriv(u1) * jnp.dot(delta_2, W2.T) # (batch_size, hidden_dim)\n",
     "\n",
     "    # calculate gradients\n",
-    "    dW1 = jnp.dot(x.T, delta_1) / batch_size\n",
-    "    db1 = jnp.mean(delta_1, axis=0)\n",
+    "    batch_size = x.shape[0]\n",
+    "    dW1 = jnp.dot(x.T, delta_1) / batch_size          # (in_dim, hidden_dim)\n",
+    "    db1 = jnp.mean(delta_1, axis=0)                   # (hidden_dim,)\n",
     "\n",
-    "    dW2 = jnp.dot(h1.T, delta_2) / batch_size\n",
-    "    db2 = jnp.mean(delta_2, axis=0)\n",
+    "    dW2 = jnp.dot(h1.T, delta_2) / batch_size         # (hidden_dim, out_dim)\n",
+    "    db2 = jnp.mean(delta_2, axis=0)                   # (out_dim,)\n",
     "\n",
-    "    # parameter update\n",
+    "    # update parameters\n",
     "    W1 -= eta * dW1\n",
     "    b1 -= eta * db1\n",
     "\n",
@@ -230,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 3000\n",
+    "epochs = 2000\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    loss = train(x_train, y_train)\n",
