--- a/softmax_regression/mnist.ipynb
+++ b/softmax_regression/mnist.ipynb
@@ -45,20 +45,21 @@
     "\n",
     "num_classes = len(jnp.unique(y_train))\n",
     "\n",
-    "x_train = x_train.reshape(x_train.shape[0], -1)\n",
-    "x_test = x_test.reshape(x_test.shape[0], -1)\n",
+    "x_train = x_train.reshape(x_train.shape[0], -1) # (60000, 28, 28) -> (60000, 784)\n",
+    "x_test = x_test.reshape(x_test.shape[0], -1)    # (10000, 28, 28) -> (10000, 784)\n",
     "\n",
     "y_train = jnp.eye(num_classes)[y_train]\n",
     "y_test = jnp.eye(num_classes)[y_test]\n",
     "\n",
     "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size=10000)\n",
     "\n",
-    "print(f\"Training data shape: {x_train.shape}\")\n",
-    "print(f\"Training labels shape: {y_train.shape}\")\n",
-    "print(f\"Validation data shape: {x_valid.shape}\")\n",
+    "print(f\"Training data shape:     {x_train.shape}\")\n",
+    "print(f\"Validation data shape:   {x_valid.shape}\")\n",
+    "print(f\"Test data shape:         {x_test.shape}\")\n",
+    "\n",
+    "print(f\"Training labels shape:   {y_train.shape}\")\n",
     "print(f\"Validation labels shape: {y_valid.shape}\")\n",
-    "print(f\"Test data shape: {x_test.shape}\")\n",
-    "print(f\"Test labels shape: {y_test.shape}\")"
+    "print(f\"Test labels shape:       {y_test.shape}\")"
    ]
   },
   {
@@ -80,12 +81,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = jnp.array(x_train)\n",
-    "y_train = jnp.array(y_train)\n",
-    "x_valid = jnp.array(x_valid)\n",
-    "y_valid = jnp.array(y_valid)\n",
-    "x_test = jnp.array(x_test)\n",
-    "y_test = jnp.array(y_test)"
+    "x_train = jnp.array(x_train) # (50000, 784)\n",
+    "x_valid = jnp.array(x_valid) # (10000, 784)\n",
+    "x_test = jnp.array(x_test)   # (10000, 784)\n",
+    "\n",
+    "y_train = jnp.array(y_train) # (50000, 10)\n",
+    "y_valid = jnp.array(y_valid) # (10000, 10)\n",
+    "y_test = jnp.array(y_test)   # (10000, 10)"
    ]
   },
   {
@@ -121,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cross_entropy(y_hat: jnp.array, y: jnp.array) -> jnp.array:\n",
+    "def cross_entropy(y: jnp.array, y_hat: jnp.array) -> jnp.array:\n",
     "    return -jnp.mean(jnp.sum(y * jnp_log(y_hat), axis=-1))"
    ]
   },
@@ -132,8 +134,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = jax.random.uniform(key=key, minval=-0.08, maxval=0.08, shape=(784, 10)).astype('float32')\n",
-    "b = jnp.zeros(shape=(10,)).astype('float32')"
+    "W = jax.random.uniform(key=key, minval=-0.08, maxval=0.08, shape=(784, 10)).astype(\"float32\")\n",
+    "b = jnp.zeros(shape=(10,)).astype(\"float32\")"
    ]
   },
   {
@@ -146,17 +148,19 @@
     "def train(x: jnp.array, y: jnp.array, eta=1.0) -> jnp.array:\n",
     "    global W, b\n",
     "\n",
-    "    y_hat = softmax(jnp.dot(x, W) + b)\n",
+    "    # forward\n",
+    "    y_hat = softmax(jnp.dot(x, W) + b)          # (batch_size, out_dim)\n",
+    "    loss = cross_entropy(y, y_hat)\n",
     "\n",
-    "    loss = cross_entropy(y_hat, y)\n",
+    "    # backward\n",
+    "    delta = y_hat - y                           # (batch_size, out_dim)\n",
     "\n",
-    "    delta = y_hat - y\n",
+    "    # calculate gradients\n",
+    "    batch_size = x.shape[0]\n",
+    "    dW = jnp.dot(x.T, delta) / batch_size       # (in_dim, out_dim)\n",
+    "    db = jnp.mean(delta, axis=0, keepdims=True) # (out_dim,)\n",
     "\n",
-    "    batch_size = x_train.shape[0]\n",
-    "\n",
-    "    dW = jnp.dot(x_train.T, delta) / batch_size\n",
-    "    db = jnp.mean(delta, axis=0, keepdims=True)\n",
-    "\n",
+    "    # update parameters\n",
     "    W -= eta * dW\n",
     "    b -= eta * db\n",
     "\n",
@@ -191,10 +195,10 @@
     "    loss, y_pred = valid(x_valid, y_valid)\n",
     "\n",
     "    if epoch % 10 == 9 or epoch == 0:\n",
-    "        print('EPOCH: {}, Valid Cost: {:.3f}, Valid Accuracy: {:.3f}'.format(\n",
+    "        print(\"EPOCH: {}, Valid Loss: {:.3f}, Valid Accuracy: {:.3f}\".format(\n",
     "            epoch + 1,\n",
     "            loss,\n",
-    "            accuracy_score(jnp.argmax(y_valid, axis=1), jnp.argmax(y_pred, axis=1))\n",
+    "            accuracy_score(jnp.argmax(y_valid, axis=-1), jnp.argmax(y_pred, axis=-1))\n",
     "        ))"
    ]
   },
@@ -205,11 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat = softmax(jnp.dot(x_test, W) + b)\n",
-    "y_pred = jnp.argmax(y_hat, axis=-1)\n",
-    "y_true = jnp.argmax(y_test, axis=-1)\n",
-    "acc = jnp.mean(y_pred == y_true)\n",
-    "print(f\"Test accuracy: {acc * 100:.2f}%\")"
+    "_, y_pred = valid(x_test, y_test)\n",
+    "accuracy = accuracy_score(jnp.argmax(y_test, axis=-1), jnp.argmax(y_pred, axis=-1))\n",
+    "print(f\"Test Accuracy: {accuracy:.3f}%\")"
    ]
   }
  ],
